src/objects/ACC_Obj1__c.object
<CustomObject>
    <description>Test</description>
    <fields>
        <fullName>Pick1__c</fullName>
        <label>Pick1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pick2__c</fullName>
        <label>Pick2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <type>Email</type>
    </fields>
    <label>ACC-Obj1</label>
    <nameField>
        <label>ACC-Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObj1s</pluralLabel>
    <recordTypes>
        <fullName>RT_1</fullName>
        <active>true</active>
        <label>RT#1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_2</fullName>
        <active>true</active>
        <label>RT#2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_3</fullName>
        <active>true</active>
        <label>RT#3</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_4</fullName>
        <active>true</active>
        <label>RT#4</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_5</fullName>
        <active>true</active>
        <label>RT#5</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retype1</fullName>
        <active>true</active>
        <label>Retype1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EmailValidation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Test2__c ,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;))</errorConditionFormula>
        <errorMessage>Enter proper email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISBLANK(Test1__c)),
    LEN(Test1__c) &lt; 10
)</errorConditionFormula>
        <errorMessage>Enter the 10 digit number</errorMessage>
    </validationRules>
</CustomObject>